testdata/bad/bad-fail-2.ct
# Command should not fail, but does.
# The failure is from the os.Chdir call.

$ echo hello

$ cd foo

# We shouldn't see this output.
$ echo should not appear

